| Bug #2461 | Compile error: Undef Symbol "test_thr_alarm" | ||
|---|---|---|---|
| Submitted: | 20 Jan 2004 8:39 | Modified: | 4 Feb 2004 16:26 |
| Reporter: | [ name withheld ] | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Compiling | Severity: | S1 (Critical) |
| Version: | 4.0.17 | OS: | Other (SCO Unix 5.0.4) |
| Assigned to: | Michael Widenius | CPU Architecture: | Any |
[20 Jan 2004 8:39]
[ name withheld ]
[20 Jan 2004 9:51]
Boyd Gerber
FSU-threads does not support pthread_key_delete in pthread.c which is the thread library used with SCO OpenServer.
[4 Feb 2004 16:26]
Michael Widenius
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
I have now fixed this for MySQL 4.0.18 by adding a test if pthread_key_delete() exists.
Regards,
Monty
